AML-3820 Added sorting of invited employers Added Unit Tests

--- a/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/NewEmployerUser.cshtml
+++ b/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/NewEmployerUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.DAS.ProviderRegistrations.Web.Models.NewEmployerUserViewModel
+﻿@model SFA.DAS.ProviderRegistrations.Web.ViewModels.NewEmployerUserViewModel
 @using SFA.DAS.ProviderRegistrations.Web.Extensions
 @{
     ViewData["Title"] = "Manage apprenticeships";
