--- a/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/ReviewDetails.cshtml
+++ b/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/ReviewDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.DAS.ProviderRegistrations.Web.Models.NewEmployerUserViewModel
+﻿@model SFA.DAS.ProviderRegistrations.Web.ViewModels.NewEmployerUserViewModel
 @{
     ViewData["Title"] = "Manage apprenticeships";
 }
