--- a/src/SFA.DAS.ProviderRegistrations.Web/Views/_ViewImports.cshtml
+++ b/src/SFA.DAS.ProviderRegistrations.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using SFA.DAS.ProviderRegistrations
+@using SFA.DAS.ProviderRegistrations.Web
 @using SFA.DAS.ProviderUrlHelper.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebEssentials.AspNetCore.CdnTagHelpers
+@addTagHelper *, SFA.DAS.ProviderRegistrations.Web
