--- a/src/SFA.DAS.ProviderRegistrations.Web/wwwroot/stylesheets/site.css
+++ b/src/SFA.DAS.ProviderRegistrations.Web/wwwroot/stylesheets/site.css
@@ -27,3 +27,35 @@
 .govuk-button--looks-like-link:visited {
     color: #4c2c92;
 }
+
+td.govuk-table__cell.nowrap {
+    white-space: nowrap
+}
+
+.sorted-ascending::after {
+    content: "";
+    margin-left: 3px;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    -webkit-clip-path: polygon(0 0, 50% 100%, 100% 0);
+    clip-path: polygon(0 0, 50% 100%, 100% 0);
+    border-color: rgba(0, 0, 0, 0);
+    border-style: solid;
+    border-width: 10px 5px 0;
+    border-top-color: inherit;
+}
+
+.sorted-descending::after {
+    content: "";
+    margin-left: 3px;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    -webkit-clip-path: polygon(50% 0, 0 100%, 100% 100%);
+    clip-path: polygon(50% 1%, 1% 100%, 100% 100%);
+    border-color: rgba(0, 0, 0, 0);
+    border-style: solid;
+    border-width: 0 5px 10px;
+    border-bottom-color: inherit;
+}
