AML-3935 Content update

--- a/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/StartAccountSetup.cshtml
+++ b/src/SFA.DAS.ProviderRegistrations.Web/Views/Registration/StartAccountSetup.cshtml
@@ -18,7 +18,7 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                Before you start, you must make sure you have permission to invite the employer to setup an account.
+                You must make sure you have spoken to the employer and have permission to invite them to set up an account.
             </strong>
         </div>
 
