--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
@@ -12,8 +12,7 @@
             </h1>
             <div class="govuk-success-summary__body">
                 <p>
-                    You've successfully updated permissions for <span class="govuk-!-font-weight-bold">@Model.AccountProviderLegalEntity.ProviderName</span><br/>
-                    This training provider will receive notification shortly.
+                    You've successfully updated permissions for <span class="govuk-!-font-weight-bold">@Model.AccountProviderLegalEntity.ProviderName</span>
                 </p>
             </div>
         </div>
