CON - 1336 - Provider permissions - Contextual support widget

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -4,6 +4,7 @@
 
 @{
     ViewBag.Title = Model.AccountLegalEntity.Name;
+    ViewBag.ZenDeskLabel = "permissions-set-permissions";
     var recruitmentNoOptionId = string.Empty;
     const string RecruitmentNoBlurbId = "recruitmentNoBlurb";
     var hasRecruitmentPermissionPreviouslyBeenSet = false;
