--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = Model.AccountLegalEntity.Name;
+    ViewBag.ZenDeskLabel = "permissions-confirm-training-provider-permissions";
 }
 
 @section breadcrumb
