--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Permissions updated";
+    ViewBag.ZenDeskLabel = "permissions-permissions-updated";
 }
 
 <div class="govuk-grid-row">
