--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Add.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Confirm training provider";
+    ViewBag.ZenDeskLabel = "permissions-confirm-training-provider";
 }
 
 @section breadcrumb
