--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Training provider added";
+    ViewBag.ZenDeskLabel = "permissions-training-provider-added";
 }
 
 <div class="govuk-grid-row">
