--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Search for a training provider";
+    ViewBag.ZenDeskLabel = "permissions-search-for-a-training-provider";
 }
 
 @section breadcrumb
