--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = Model.AccountProvider.ProviderName;
+    ViewBag.ZenDeskLabel = "permissions-view-training-provider-permissions";
 }
 
 @section breadcrumb
