--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "Training provider permissions";
+    ViewBag.ZenDeskLabel = "permissions-training-provider-permissions";
 }
 
 @section breadcrumb
