--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
@@ -5,7 +5,7 @@
     <table class="govuk-table govuk-!-font-size-19">
         <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-            <th class="govuk-table__header">Training providers</th>
+            <th class="govuk-table__header">Training provider name</th>
             <th class="govuk-table__header">Permissions</th>
             @if (Model.IsUpdatePermissionsOperationAuthorized)
             {
