--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -18,8 +18,8 @@
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Enter your training provider's UK Provider Reference Number(UKPRN)</h1>
     </div>
     <div class="govuk-grid-column-two-thirds">
-        <p class="govuk-body">This is the unique 8-digit number that we use to identify a training provider.</p>
-        <p>Ask your training provider for their UKPRN if you do not know it.</p>
+        <p class="govuk-body">This is the unique, 8-digit number that we use to identify a training provider.
+        Ask your training provider for their UKPRN if you do not know it.</p>
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
