--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
@@ -6,16 +6,16 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div aria-labelledby="success-summary-title" class="govuk-success-summary govuk-!-text-align-center" role="alert" tabindex="-1">
-            <h1 class="govuk-heading-xl govuk-!-margin-bottom-2 govuk-!-margin-top-4" id="success-summary-title">
-                Permissions updated
+        
+        @Html.Partial("_ValidationSummary", ViewData.ModelState)
+
+        <div class="govuk-panel govuk-panel--confirmation">
+            <h1 class="govuk-panel__title">
+                You've successfully changed @Model.AccountProviderLegalEntity.ProviderName's permissions
             </h1>
-            <div class="govuk-success-summary__body">
-                <p>
-                    You've successfully updated permissions for <span class="govuk-!-font-weight-bold">@Model.AccountProviderLegalEntity.ProviderName</span>
-                </p>
-            </div>
         </div>
+        <p class="govuk-body">We’ll send @Model.AccountProviderLegalEntity.ProviderName an email to let them know that you’ve changed their permissions and what their new permissions are.</p>
+       
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
@@ -35,14 +35,14 @@
                             <div class="govuk-radios__item">
                                 @Html.RadioButtonFor(m => m.Choice, "SetPermissions", new { id = "choice-1", @class = "govuk-radios__input" })
                                 <label class="govuk-label govuk-radios__label" for="choice-1">
-                                    Set permissions for another organisation
+                                    View your training providers
                                 </label>
                             </div>
                         }
                         <div class="govuk-radios__item">
                             @Html.RadioButtonFor(m => m.Choice, "AddTrainingProvider", new { id = "choice-2", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="choice-2">
-                                Add another training provider
+                                Add a training provider
                             </label>
                         </div>
                         <div class="govuk-radios__item">
@@ -54,7 +54,7 @@
                     </div>
                 </fieldset>
             </div>
-            <button class="govuk-button" type="submit">Continue</button>
-        }  
+            <button class="govuk-button" type="submit">Confirm</button>
+        }
     </div>
 </div>
