--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ZenDeskWidget.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ZenDeskWidget.cshtml
@@ -13,7 +13,7 @@
             },
             helpCenter: {
                 filter: {
-                    section: @Html.GetZenDeskSnippetSectionId()
+                    section: "@Html.GetZenDeskSnippetSectionId()"
                 }
             }
         }
