--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <!--[if !IE 8]><!-->
     <link href="@Html.CdnLink("css", "main.css")" rel="stylesheet" />
     <!--<![endif]-->
+    @Html.Partial("_ZenDeskWidget")
     @Html.Partial("_GoogleAnalyticsHead")
 </head>
 <body class="govuk-template__body">
