--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -9,13 +9,10 @@
 {
     <a href="@Html.EmployerUrls().Account()" class="govuk-back-link">Back</a>
 }
-
+  
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Your training providers</h1>
-    </div>
-
     <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-xl">Your training providers</h1>
         <p class="govuk-body">You can add a training provider, then set permissions to choose what they can do on your behalf.</p>
 
         @if (Model.AccountProviders.Count == 0)
@@ -27,14 +24,12 @@
         {
             <a class="govuk-button" href="@Url.Action("Find")" role="button">Add a training provider</a>
         }
-    </div>
     
-    @if (Model.AccountProviders.Count > 0)
-    {
-        @Html.Action(Model.AccountLegalEntitiesCount == 1 ? "AccountProvidersWithSingleOrganisation" : "AccountProvidersWithMultipleOrganisation", new { model = Model })
-    }
-
-    <div class="govuk-grid-column-two-thirds">
+        @if (Model.AccountProviders.Count > 0)
+        {
+            @Html.Action(Model.AccountLegalEntitiesCount == 1 ? "AccountProvidersWithSingleOrganisation" : "AccountProvidersWithMultipleOrganisation", new { model = Model })
+        }
+    
         @Html.Partial("_HowPermissionsWork")
     </div>
 </div>
