--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -35,7 +35,7 @@
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-            <table class="govuk-table govuk-!-font-size-19">
+            <table class="govuk-table">
                 <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
                         <th class="govuk-table__header">Permissions</th>
