CON-1466-bring back all providers

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Index.cshtml
@@ -22,7 +22,7 @@
 
         @if (Model.IsAddProviderOperationAuthorized)
         {
-            <a class="govuk-button" href="@Url.Action("Find")" role="button">Add a training provider</a>
+            <a class="govuk-button" href="@Url.Action("Find","Providers")" role="button">Add a training provider</a>
         }
     </div>
 </div>
