--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
@@ -30,16 +30,13 @@
                     <span class="govuk-error-message">
                         @Html.ValidationMessageFor(m => m.Choice)
                     </span>
-                    <div class="govuk-radios">
-                        @if (Model.AccountLegalEntitiesCount > 1)
-                        {
-                            <div class="govuk-radios__item">
-                                @Html.RadioButtonFor(m => m.Choice, "YourTrainingProviders", new { id = "choice-1", @class = "govuk-radios__input" })
-                                <label class="govuk-label govuk-radios__label" for="choice-1">
-                                    View your training providers
-                                </label>
-                            </div>
-                        }
+                    <div class="govuk-radios">                        
+                        <div class="govuk-radios__item">
+                            @Html.RadioButtonFor(m => m.Choice, "YourTrainingProviders", new { id = "Choice", @class = "govuk-radios__input" })
+                            <label class="govuk-label govuk-radios__label" for="Choice">
+                                View your training providers
+                            </label>
+                        </div>                        
                         <div class="govuk-radios__item">
                             @Html.RadioButtonFor(m => m.Choice, "AddTrainingProvider", new { id = "choice-2", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="choice-2">
