--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
@@ -7,16 +7,16 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div aria-labelledby="success-summary-title" class="govuk-success-summary govuk-!-text-align-center" role="alert" tabindex="-1">
-            <h1 class="govuk-heading-xl govuk-!-margin-bottom-2 govuk-!-margin-top-4" id="success-summary-title">
+
+        <div class="govuk-panel govuk-panel--confirmation">
+            <h1 class="govuk-panel__title">
                 Permissions updated
             </h1>
-            <div class="govuk-success-summary__body">
-                <p>
-                    You've successfully updated permissions for <span class="govuk-!-font-weight-bold">@Model.AccountProviderLegalEntity.ProviderName</span>
-                </p>
+            <div class="govuk-panel__body">
+                You've successfully updated permissions for <br /><strong>@Model.AccountProviderLegalEntity.ProviderName</strong>
             </div>
         </div>
+
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
