CON-1466-include tests

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.Providers.FindProvidersViewModel
+﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.FindProvidersViewModel
 
 @{
     ViewBag.Title = "Search for a training provider";
@@ -7,7 +7,7 @@
 
 @section breadcrumb
 {
-    @*<a class="govuk-back-link" href="@Url.Action("Index")">Back</a>*@
+    <a class="govuk-back-link" href="@Url.Action("Index")">Back</a>
 }
 
 <div class="govuk-grid-row">
