--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
     <script>
 
-        var idSelectField = 'Ukprn';
+        var idSelectField = 'ProviderUkprn';
 
         var selectEl = document.querySelector('#' + idSelectField);
         if (selectEl) {
