CON-1466-code review comment changes

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.FindProvidersViewModel
+﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.FindProviderViewModel
 
 @{
     ViewBag.Title = "Search for a training provider";
