--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -34,7 +34,7 @@
                 </span>
                 <select id="Ukprn" name="ProviderUkprn" class="govuk-select">
                     <option value="">Search for a provider </option>
-                    @foreach (var provider in Model.Providers)
+                    @foreach (var provider in Model.ProviderDto)
                     {
                         <option value="@provider.ProviderUkprn">@provider.FormattedProviderSuggestion</option>
                     }
